@@ -1670,101 +1670,8 @@ FUNCTION(fun_text)
     safe_str("#-1 FILE NOT LISTED",buff,bufc);
 }
 
-#if 0
+#endif // FIRANMUX
 
-/*
- * ---------------------------------------------------------------------------
- * * successes: return the number of successes/botches from a bunch of
- * *            dice rolled Storyteller-style.
- * *
- * * Algorithm:
- * *   Roll some specified number of 10-sided dice.  For each die rolled,
- * *   if the roll is greater than or equal to the target difficulty, then
- * *   increment the total number of successes.  If the roll is a 1, then
- * *   decrement the total number of successes.  Return the final successes
- * *   count.
- * *
- * *   If the number of dice is more than the difficulty, return 0 for
- * *   any final result < 0 and return 1 for any final result = 0.
- * *   (Turn botches into simple failures. Turn failures into simple
- * *   successes.)
- */
-
-#define DIE_TO_ROLL 10
-
-FUNCTION(fun_successes)
-{
-    int successes = 0;
-    int roll;
-
-    // First argument is the number of dice to roll.
-    // Second argument is the target difficulty to roll against.
-    //
-    int num_dice = mux_atol(fargs[0]);
-    int target_difficulty = mux_atol(fargs[1]);
-
-    // Check arguments for reasonable values:
-    //
-    //   if the number of dice is zero, just return 0 successes.
-    //   if the number of dice is negative, return an error.
-    //   if the number of dice is greater than 100, return an error (too much work).
-    //   else, go and do the roll.
-    //
-    // Note: we don't care if the target difficulty is a reasonable number or not.
-    //
-    if (0 == num_dice)
-    {
-        safe_str("0", buff, bufc);
-    }
-    else if (num_dice < 0)
-    {
-        safe_str("#-1 NUMBER OF DICE SHOULD BE > 0", buff, bufc);
-    }
-    else if (100 < num_dice)
-    {
-        safe_str("#-2 THAT'S TOO MANY DICE FOR ME TO ROLL", buff, bufc);
-    }
-    else
-    {
-        // Roll some number of dice equal to num_dice and count successes and botches
-        //
-        int i;
-        for (i = 0; i < num_dice; i++)
-        {
-            roll = RandomINT32(1, DIE_TO_ROLL);
-            if (1 == roll)
-            {
-                // Botch -- decrement successes.
-                //
-                --successes;
-            }
-            else if (target_difficulty <= roll)
-            {
-                // Success -- increment successes.
-                //
-                ++successes;
-            }
-        }
-
-        if (target_difficulty < num_dice)
-        {
-            if (successes < 0)
-            {
-                successes = 0;
-            }
-            else if (successes == 0)
-            {
-                successes = 1;
-            }
-        }
-
-        // Return final number of successes (positive, negative, or zero).
-        //
-        safe_ltoa(successes, buff, bufc);
-    }
-}
-
-#else
 
 // fun_successes
 //
@@ -1915,9 +1822,9 @@ static const dice_node dice_table[MAXDICE][MAXDIFF] =
     }
 };
 
-#define DIE_TO_ROLL 1000
 #define OLDSUCC_DIE_TO_ROLL 10
-#define NUMBER_TOO_LARGE -200
+#define DIE_TO_ROLL         1000
+#define NUMBER_TOO_LARGE    (-200)
 
 /*
  * Roll a 10-sided die. If it's equal to or higher than the difficulty,
@@ -2015,29 +1922,88 @@ FUNCTION(fun_successes)
         return;
     }
 
-    int num_dice   = mux_atol(fargs[0]);
-    int difficulty = mux_atol(fargs[1]);
-
-    int successes;
-    switch (getsuccs(num_dice, difficulty, &successes))
+    int ver = 1;
+    if (3 <= nfargs)
     {
-    case 0:
-        safe_tprintf_str(buff, bufc, "%d", successes);
-        break;
+        ver = mux_atol(fargs[2]);
+    }
 
-    case NUMBER_TOO_LARGE:
-        safe_str("#-1 INVALID SUCCESS TABLE", buff, bufc);
-        break;
+    int num_dice   = mux_atol(fargs[0]);
 
-    default:
-        safe_str("#-1 UNKNOWN ERROR", buff, bufc);
-        break;
+    if (0 == num_dice)
+    {
+        safe_str("0", buff, bufc);
+    }
+    else if (num_dice < 0)
+    {
+        safe_str("#-1 NUMBER OF DICE SHOULD BE > 0", buff, bufc);
+    }
+    else if (100 < num_dice)
+    {
+        safe_str("#-1 THAT'S TOO MANY DICE FOR ME TO ROLL", buff, bufc);
+    }
+    else
+    {
+        int difficulty = mux_atol(fargs[1]);
+        int successes = 0;
+        if (1 == ver)
+        {
+            switch (getsuccs(num_dice, difficulty, &successes))
+            {
+            case 0:
+                safe_tprintf_str(buff, bufc, "%d", successes);
+                break;
+
+            case NUMBER_TOO_LARGE:
+                safe_str("#-1 INVALID SUCCESS TABLE", buff, bufc);
+                break;
+
+            default:
+                safe_str("#-1 UNKNOWN ERROR", buff, bufc);
+                break;
+            }
+        }
+        else
+        {
+            // Roll some number of dice equal to num_dice and count successes and botches
+            //
+            int i;
+            for (i = 0; i < num_dice; i++)
+            {
+                int roll = RandomINT32(1, OLDSUCC_DIE_TO_ROLL);
+                if (1 == roll)
+                {
+                    // Botch -- decrement successes.
+                    //
+                    --successes;
+                }
+                else if (difficulty <= roll)
+                {
+                    // Success -- increment successes.
+                    //
+                    ++successes;
+                }
+            }
+
+            if (difficulty < num_dice)
+            {
+                if (successes < 0)
+                {
+                    successes = 0;
+                }
+                else if (successes == 0)
+                {
+                    successes = 1;
+                }
+            }
+
+            // Return final number of successes (positive, negative, or zero).
+            //
+            safe_ltoa(successes, buff, bufc);
+        }
     }
 }
 
-#endif
-
-#endif // FIRANMUX
 
 /*
  * ---------------------------------------------------------------------------
@@ -10236,9 +10202,7 @@ static FUN builtin_function_list[] =
     {"SUB",         fun_sub,        MAX_ARG, 2,       2,         0, CA_PUBLIC},
     {"SUBEVAL",     fun_subeval,    MAX_ARG, 1,       1,         0, CA_PUBLIC},
     {"SUBJ",        fun_subj,       MAX_ARG, 1,       1,         0, CA_PUBLIC},
-#if defined(FIRANMUX)
-    {"SUCCESSES",   fun_successes,  MAX_ARG, 2,       2,         0, CA_PUBLIC},
-#endif // FIRANMUX
+    {"SUCCESSES",   fun_successes,  MAX_ARG, 2,      32,         0, CA_PUBLIC},
     {"SWITCH",      fun_switch,     MAX_ARG, 2, MAX_ARG, FN_NOEVAL, CA_PUBLIC},
     {"T",           fun_t,                1, 0,       1,         0, CA_PUBLIC},
     {"TABLE",       fun_table,      MAX_ARG, 1,       6,         0, CA_PUBLIC},
